--- a/testBenchGenerator/testBenchGenerator.csproj
+++ b/testBenchGenerator/testBenchGenerator.csproj
@@ -61,8 +61,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\Clock.cs" />
+    <Compile Include="Model\DataInput.cs" />
     <Compile Include="Model\FileGen.cs" />
+    <Compile Include="Model\Port.cs" />
     <Compile Include="Model\InputFile.cs" />
+    <Compile Include="Model\Reset.cs" />
+    <Compile Include="Model\ValidInput.cs" />
     <Compile Include="ViewModel\AnalyzerViewModel.cs" />
     <Compile Include="ViewModel\GeneratorViewModel.cs" />
     <Compile Include="View\AnalyzerView.xaml.cs">
