--- a/testBenchGenerator/testBenchGenerator.csproj
+++ b/testBenchGenerator/testBenchGenerator.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Model\Clock.cs" />
+    <Compile Include="Model\PolConverter.cs" />
     <Compile Include="Model\PortSel.cs" />
     <Compile Include="Model\TestCase.cs" />
     <Compile Include="Model\FileGen.cs" />
