--- a/testBenchGenerator/testBenchGenerator.csproj
+++ b/testBenchGenerator/testBenchGenerator.csproj
@@ -86,6 +86,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Windows.Forms.DataVisualization.Design" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -98,13 +102,20 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FIRDesignerWinForms\frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FIRDesignerWinForms\frmMain.Designer.cs" />
     <Compile Include="Model\Clock.cs" />
+    <Compile Include="Model\FilterType.cs" />
+    <Compile Include="Model\FIR.cs" />
     <Compile Include="Model\PolConverter.cs" />
     <Compile Include="Model\PortSel.cs" />
     <Compile Include="Model\TestCase.cs" />
@@ -114,8 +125,10 @@
     <Compile Include="Model\InputFile.cs" />
     <Compile Include="Model\Radix.cs" />
     <Compile Include="Model\Reset.cs" />
+    <Compile Include="Model\WindowType.cs" />
     <Compile Include="ViewModel\AnalyzerViewModel.cs" />
     <Compile Include="ViewModel\ClockViewModel.cs" />
+    <Compile Include="ViewModel\FIRViewModel.cs" />
     <Compile Include="ViewModel\NewTCViewModel.cs" />
     <Compile Include="ViewModel\PortSelViewModel.cs" />
     <Compile Include="ViewModel\TestCaseViewModel.cs" />
@@ -127,6 +140,9 @@
     <Compile Include="ViewModel\ResetViewModel.cs" />
     <Compile Include="View\AnalyzerView.xaml.cs">
       <DependentUpon>AnalyzerView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\FIRView.xaml.cs">
+      <DependentUpon>FIRView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\GeneratorView.xaml.cs">
       <DependentUpon>GeneratorView.xaml</DependentUpon>
@@ -148,6 +164,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\AnalyzerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\FIRView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -175,6 +195,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="FIRDesignerWinForms\frmMain.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
