--- a/testBenchGenerator/testBenchGenerator.csproj
+++ b/testBenchGenerator/testBenchGenerator.csproj
@@ -129,6 +129,7 @@
     <Compile Include="TestbenchGenerator\Model\Radix.cs" />
     <Compile Include="TestbenchGenerator\Model\Reset.cs" />
     <Compile Include="FIRDesigner\Model\WindowType.cs" />
+    <Compile Include="WaveformDesignerAndAnalyzer\Model\Delimiter.cs" />
     <Compile Include="WaveformDesignerAndAnalyzer\Model\WaveformAnalyzer.cs" />
     <Compile Include="WaveformDesignerAndAnalyzer\Model\WaveformDesigner.cs" />
     <Compile Include="WaveformDesignerAndAnalyzer\ViewModel\WaveformAnalyzerViewModel.cs" />
